z-index change to fix hidden suggestions and related notifications.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -648,7 +648,7 @@ button:disabled.needs-save {
     list-style: none;
     margin: 0;
     padding: 0;
-    z-index: 1000;
+    z-index: 1100;
     max-height: 9.375rem;
     overflow-y: auto;
 	text-align: center;
@@ -674,7 +674,7 @@ button:disabled.needs-save {
 	padding: 0.375rem 0.625rem;
 	border-radius: 0.375rem;
 	font-size: 0.85rem;
-	z-index: 1100;
+	z-index: 1200;
 	box-shadow: 0 0.25rem 0.625rem rgba(0,0,0,0.08);
 }
 
